--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "css-loader": "^0.28.4",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
-    "vue-style-loader": "^3.0.1"
+    "vue-style-loader": "^3.0.1",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "N3-components": "^2.2.5",
